glx/testdata/invalid/invalid-assertion-claims/vocabularies/relationship-properties.glx
../../../../../specification/5-standard-vocabularies/relationship-properties.glx